[package]
name = "utah2"
version = "0.1.1"
authors = ["youness_kafia"]
edition = "2018"
description = "utah but it works for rust 2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.13.0"
ndarray-rand="0.11.0"
rand="0.7.3"
num = "0.2.1"
error-chain="0.12.2"
itertools = "0.8.2"
csv = "1.1.3"
rustc-serialize = "0.3.24"